cabal-version: 2.4
name: syp-interpreter
version: 0.1.0.0
maintainer: michaelhorowitzdev@gmail.com
author: MichaelHorowitzDev
x-ghc-framework-version: 9.2.7
x-last-ide-version: HfM1.8.2
extra-source-files:
    CHANGELOG.md

executable syp-interpreter
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Lexer
        Interpret
        Ast
        Parser
        NativeFunc
        Position
        InterpretError
    default-language: Haskell2010
    build-depends:
        base -any,
        extra -any,
        transformers -any,
        megaparsec -any,
        containers,
        vector,
        time,
        mtl
